wui fix text overflowing code editor gutters due to transparent colour

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -861,7 +861,7 @@ ez-code-edit.readonly .CodeMirror-cursors {
 
 .CodeMirror-gutters {
     border: 0;
-    background-color: rgba(0, 0, 0, .04);
+    background-color: #f5f5f5;
 }
 
 .CodeMirror-gutter {
@@ -914,7 +914,7 @@ ez-code-editor-field-help {
     margin-top: 2rem;
     margin-bottom: 2rem;
     padding: .1rem;
-    background-color: rgba(0, 0, 0, .04);
+    background-color: #f5f5f5;
 }
 
 .editor-wrapper.no-gutter {
